--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
    </div>
 </footer>
     <script src="https://getbootstrap.com/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
       
   </body>
 </html>
