--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
   </div>
 </header>
 
-<main>
-
+<main>  
+  
   <div class="album py-5 bg-light">
     <div class="container">
-
+      <div class="input-group mb-4" style="width:25%;">
+        <input type="search" id="search" class="form-control rounded" placeholder="Rechercher" aria-label="Search" aria-describedby="search-addon" />
+        <button type="button" class="btn btn-outline-primary">valider</button>
+      </div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
         
       </div>
